assets/css/style.css
body {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    background-image: url("../images/gravel.png");
}

/* Navigation bar */

.navbar {
    padding-top: 0;
    padding-bottom: 0;
    background-color: #ffffff;
    border-bottom: 2px solid #cccccc
}

.navbar-light .navbar-brand {
    width: 250px;
    text-align: center;
    font-family: Georgia, Times, "Times New Roman", serif;
    font-size: 30px;
    font-weight: 700;
    line-height: 70px;
    background-color: #4aaaa5;
    color: #ffffff;
}

.navbar-light .navbar-nav .active>.nav-link {
    color: #555555;
}

/* Main body */

.main-container {
    margin: 30px auto;
    padding: 20px 30px;
    line-height: 32px;
    color: #555555;
}

.main-title {
    font-size: 30px;
    font-weight: 700;
    color: #4aaaa5;
}

hr {
    margin: 20px 0px;
    border-color: #cccccc;
    border-style: solid;
}

/* Footer */
footer {
    padding: 20px 0;
    font-size: 12px;
    color: #cccccc;
    background-color: #666666;
    border-top: 8px solid #4aaaa5;
}

/* About page */

#about-image {
    float: left;
    margin: 5px 20px 0 0;
    width: auto;
    max-height: 160px;
}

/* Portfolio page */

.figure {
    position: relative;
    margin: 20px 0;
}

.figure-caption {
    position: absolute;
    bottom: 20px;
    left: 0;
    width: 100%;
    line-height: 46px;
    color: #ffffff;
    background-color: #4aaaa5;
}

/* Contact page */

.btn-teal {
    background-color: #4aaaa5;
    border-color: #4aaaa5;
}

.btn-teal:hover {
    background-color: #367c79;
    border-color: #367c79;
}

.btn-teal:active {
    background-color: #367c79 !important;
    border-color: #367c79 !important;
}

